Added new images, and background for the story
---

layout additions:
1. drawables
2. image views

         -Liudas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="next">NEXT</string>
     <string name="skip">SKIP</string>
     <string name="start">OK</string>
+    <string name="splash_desc">Splash screen</string>
 
 
 </resources>
